add group column when making the order info file